# mcqpy-shiny

./: README.md  pyproject.toml
.github/workflows/: publish-wheel-pages.yml
example/: quiz.json
src/mcqpy_shiny/: __init__.py  app.py  embed_app.py  embed_cli.py  loader.py  runtime_bundle.py  shared_core.py
