[project]
name = "mcqpy-shiny"
version = "0.1.0"
description = "Static-friendly Shiny quiz app for mcqpy bundles"
readme = "README.md"
authors = [
    { name = "Mads-Peter", email = "machri@phys.au.dk" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "mcqpy>=0.2.3",
    "shiny>=1.2.1",
    "shinylive>=0.8.5",
]

[tool.uv.sources]
mcqpy = { path = "../mcqpy", editable = true }

[project.scripts]
mcqpy-shiny = "mcqpy_shiny.app:run_app"
mcqpy-shiny-embed = "mcqpy_shiny.embed_cli:main"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 88
